Bug 1437250 - Bookmark url queries shouldn't return folder shortcuts. r=mak

URL queries don't need to return queries not shortcuts, as that isn't what the invoker is expecting.

MozReview-Commit-ID: 74LvXqc40Ps